// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`TypegooseCoreModule forAsyncRoot different types useFactory injects the factory's async options into DEFAULT_DB_CONNECTION_NAME 1`] = `
[
  {
    "inject": [
      "CONFIG_SERVICE",
    ],
    "provide": "TypegooseModuleOptions",
    "useFactory": [MockFunction],
  },
  {
    "inject": [
      "TypegooseModuleOptions",
    ],
    "provide": "mongo connectionConnection",
    "useFactory": [Function],
  },
  {
    "provide": "TypegooseConnectionName",
    "useValue": "mongo connectionConnection",
  },
]
`;

exports[`TypegooseCoreModule forAsyncRoot different types useFactory injects the factory's async options into DEFAULT_DB_CONNECTION_NAME 2`] = `
[
  {
    "inject": [
      "TypegooseModuleOptions",
    ],
    "provide": "mongo connectionConnection",
    "useFactory": [Function],
  },
]
`;
